1 April 2005 Sylvain Pion
- update obsolete mirror_index() call.

15 January 2005 Sylvain Pion
- Missing this-> for g++ 4.0

======================================== CGAL 3.1 ======================

9 february 2005 Mariette
- fixed const correctness
- add doc of the filtration

30 decembre 2004 Mariette
- filtration  added (const correctness of the function to be done)

27 December 2004 Mariette
- changed assert() to cgal_triangulation_assertion()

17 december 2004 Mariette
-fixed include in doc file Alpha_status.tex

19 novembre 2004 Mariette
- changed authors

18 September 2004 Andreas Fabri
- Changed the data file for example_big_alpha.C

27 August 2004 Mariette
- add Alpha_shapes_3/examples/Alpha_shapes_3/example_big_alpha.C 
  in CVS repository

25 August 2004 Mariette
- make function set_alpha_min_of_vertices a template 
  so that explicit instanciation of the whole class works in any case.

13 August 2004 Mariette
- fixes in the doc

11 August 2004 Mariette
- fixed multiple declaration of Alpha_status_const_iterator
  in Alpha_shape_cell_base_3.h and Alpha_shape_vertex_base_3.h
- Fixed (that is removed) default argument 
  in get_alpha_shapes_cells and the like. 


10 August 2004 Mariette
   merge major changes from branch tmp-my-2
- use a compact container to store alpha_status of facets and edges
- alpha_status of vertices are stored in vertices
- do not build alpha_edge_map and edge_alpha_map in REGULARIZED mode
  edges are then classify on the fly
- suppress SUPER_REGULAR type. For any $k$ :
  in GENERAL mode,  a boundary $k$ face is said to be REGULAR
  when belonging to a  $k+1$ of the Alpha complex
  in REGULAR mode. a boundary $k$ face is said to be REGULAR
  when belonging to a cell of the Alpha complex
- introduce the notion of Gabriel vertex or not Gabriel vertex
  for regular triangulation and add the  alpha_min_vertex_map;
- suppress building of alpha_mid_facet_map, alpha_mid_edge_map
  and alpha_mid_vertex_map.